--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+*.unity
+*.meta
+*.unity
+*.meta
+D&D_Helper/.vs/D&D_Helper/v15/sqlite3/storage.ide
+D&D_Helper/Assets/Prefabs.meta
