--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ sysinfo.txt
 *.meta
 D&D_Helper/.vs/D&D_Helper/v15/sqlite3/storage.ide
 D&D_Helper/Assets/Prefabs.meta
+D&D_Helper/Assets/Prefabs.meta
