Revert "Initial commit"
This reverts commit 375f12f586ea971860d04edb6c6e874172939996.

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ D&D_Helper/.vs/D&D_Helper/v15/sqlite3/storage.ide
 
 D&D_Helper/Assets/Prefabs.meta
 D&D_Helper/Assets/Prefabs.meta
+D&D_Helper/Assets/Scenes/Base.unity
